--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #d9dcd6;
+    background-color: #9a9b9a;
 }
 
 /* li {
@@ -23,7 +23,7 @@ body {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
-    color: #ffffff;
+    color: #b4b4b4;
 }
 
 .header h1 {
